# dino

./: Cargo.toml  README.md  pubspec.yaml
android/: local.properties
android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
integration_test/: simple_test.dart
ios/Runner/: GeneratedPluginRegistrant.m
lib/: main.dart
lib/models/: project_provider.dart  video_project.dart
lib/screens/: editor_screen.dart
lib/src/rust/: frb_generated.dart
lib/utils/: video_utils.dart
lib/widgets/: controls.dart  side_panel.dart  timeline.dart  video_preview.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/api/: video.rs
rust_builder/: pubspec.yaml
rust_builder/.dart_tool/: package_config.json  package_config_subset  package_graph.json
rust_builder/.dart_tool/extension_discovery/: vs_code.json
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/build_tool/.dart_tool/: package_config.json
rust_builder/ios/: rust_lib_dino.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_dino.podspec
rust_builder/windows/: CMakeLists.txt
src/: frame.rs  frame_cache.rs  main.rs  media.rs  playback.rs  proxy_generator.rs  settings.rs  timeline.rs  video_decoder.rs
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc
