[package]
name = "dino"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
image = { version = "0.25.6", features = ["jpeg", "png"] }
rfd = "0.12"
gstreamer = { version = "0.22" }
gstreamer-app = { version = "0.22" }
gstreamer-video = { version = "0.22" }
